--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"author": "Paulo Barcelos - paulobarcelos.com",
 	"description": "Applications for Mixology, Mytilus Edilus edition.",
 	"dependencies" : {
-		"express": "3.1.0"
+		"node-static": "0.6.7"
 	},
 	"engines": {
 		"node": "0.8.12"
